[project]
name = "impliedvolatility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "py-vollib>=1.0.1",
    "scipy>=1.14.1",
    "streamlit>=1.40.0",
    "yfinance[nospam,repair]>=0.2.48",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
