[project]
name = "impliedvolatility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.16.0",
    "streamlit>=1.46.0",
    "yfinance[nospam,repair]>=0.2.63",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
